--- a/components/partners/partners.html
+++ b/components/partners/partners.html
@@ -1,20 +1,47 @@
 <section class="section has-background-dark">
-  <div class="container">
-    <div class="academic-partner has-text-centered mt-6 mb-4">
-      <p class="is-size-6 has-text-grey-light mb-2">Academic Partner</p>
-    
-      <div>
-        <img 
-          src="/img/logos/Akdeniz_University.png" 
-          alt="Akdeniz University Logo" 
-          style="max-width: 120px; opacity: 0.85;"
-        >
+  <div class="container" style="max-width: 800px;">
+    <div class="columns">
+      <div class="column">
+        <div class="academic-partner has-text-centered">
+          <p class="is-size-5 has-text-grey-light mb-2">Academic Partner</p>
+          <div>
+            <a href="https://akdenizarastirmalari.akdeniz.edu.tr/en" target="_blank" rel="noopener noreferrer">
+              <img 
+              src="/img/logos/Akdeniz_University.png" 
+              alt="Akdeniz University Logo" 
+              style="max-width: 100px;"
+              >
+            </a>
+          </div>
+
+          <p class="is-size-7 has-text-grey mt-2">
+            Akdeniz University – Mediterranean Civilisations Research Institute<br>
+            Department of Mediterranean Underwater Cultural Heritage Research
+          </p>
+        </div>
       </div>
-    
-      <p class="is-size-7 has-text-grey mt-2">
-        Akdeniz University – Mediterranean Civilisations Research Institute<br>
-        Department of Mediterranean Underwater Cultural Heritage Research
-      </p>
+
+      <div class="column">
+        <div class="diving-partners has-text-centered">
+          <p class="is-size-5 has-text-grey-light mb-2">Diving Partner</p>
+
+          <div>
+            <a href="https://gue.com.tr" target="_blank" rel="noopener noreferrer">
+              <img 
+              src="/img/logos/gue_tr_logo_dark_circle_100px.png" 
+              alt="GUE TR Logo" 
+              style="max-width: 100px;"
+              >
+            </a>
+          </div>
+
+          <p class="is-size-7 has-text-grey mt-2">
+            GUE Türkiye Diving Community<br>
+            Supporting scientific diving and documentation
+          </p>
+        </div>
+      </div>
     </div>
+
   </div>
 </section>
